Admin/css/common.css
/*Body styles*/
* {   
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Segoe UI', 'cursive';
    /*font-family: 'Poppins', sans-serif;*/
    /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
    /*font-family: Arial, sans-serif;*/
    background-color: #f4f4f4;
    width: 100vw;
    height: 100vh;
    /*background-image: url("../Images/bg.gif");*/
    background-size: cover; /* Ensures the image covers the entire screen */
    background-position:center; /* Centers the image */
    background-repeat: no-repeat; /* No repeating background image */
    background-attachment: fixed; /* The background image will not scroll with the page */
}

/*h1 style*/
h1 {
    font-size: 3rem;
    padding-top: 10px;
    padding-bottom: 10px;
    text-align: center;
    margin: 10px 10px 20px 10px;
    border-radius: 10px;
    /*margin-bottom: 20px;*/
    /*color: #18A0FB;*/

    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    color: #fff;
    background-image: url("../Images/sunset.jpg") ;
    background-repeat: no-repeat;
    background-size: cover;

}

/*h2 style*/
h2 {
    /*padding: 0px 0px 0px 20px;*/
    margin-top: 5px;
    font-size: 30px;
    color: #333;
}

/*table styles*/
table {
    /*padding: 10px 20px 10px 20px;*/
    width: 98%;
    /*gap: 6px;*/
    /*margin: 20px 50px 20px 50px;*/
    margin: 0px 10px 20px 10px;
    /*border: 1px solid #ddd;*/
    /*border-spacing: 10px;*/
    /*border-radius: 10px;*/
    border-collapse: separate;
    
}

table th {
    text-align: center;
    background-color: #f8f9fa;
    color: #333;
    font-size: large;
    font-weight: bold;
    /*margin: 6px;
    /*border: 1px solid #00ffd5;
    border-radius: 20px;
    /*border: 1px solid rgba(236, 236, 236, 0.137);*/
    border: 1px solid #ddd;
    padding: 15px;
}

table td {
    /*border: 2px solid #18A0FB;*/
    /*margin: 6px;*/
    border: 1px solid #ddd;
    /*border-radius: 20px;*/
    /*border: 1px solid rgba(236, 236, 236, 0.5);*/
    padding: 12px;
}

table tr:nth-child(even) {
    background-color: #ddd;
    transition: transform 0.3s ease-in-out;
}
/*table tr:nth-child(even):hover {
    background-color: #34adfd;
    color: white;
    transform: scale(1.1);
}*/
table tr:nth-child(odd) {
    background-color: #ddd;
    transition: transform 0.3s ease-in-out;
}
/*table tr:nth-child(odd):hover {
    background-color: #34adfd;
    color: white;
    transform: scale(1.1);
}*/

/*table .actions{
    gap: 10px;
    background-color: #1882fb89;
}*/

/*search delete container styles*/
.searchContainer{
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
}

/*form styles*/
form{
    width: auto;
    height: fit-content;
    margin-top: 20px;
    margin-left: 40px;
    margin-right: 20px;
    margin-bottom: 20px;
    padding: 20px;
    /*border: 1px solid #ccc;
    border-radius: 4px;
    /*background-color: rgb(80, 80, 80);*/
    /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);*/
}

form input {
    /*border: 1px solid #ccc;
    border-radius: 4px;
    padding: 0px 5px 0px 0px;
    font-family: Arial, sans-serif;*/
    font-size: large;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-right: 10px;
}

form button{
    font-size: large;
    color: black;
    background-color:#ffffff;
    cursor: pointer;
    height: 25px;
    width: auto;
    height: auto;
    padding: 10px 20px;
    border: 1px solid #ddd;
    border-radius: 10px;
    /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);*/
    transition: background-color 0.3s, transform 0.3s ease-in-out;
}

button{
    font-size: large;
    font-weight: bold;
    color: black;
    background-color:#ffffff;
    cursor: pointer;
    height: 25px;
    width: 80px;
    border: 1px solid #ffffff;
    border-radius: 5px;
    /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);*/
    transition: background-color 0.3s, transform 0.3s ease-in-out;
}

form button:hover{
    color: white;
    background-color: #ffae00;
    transform: scale(1.05);
}

button:hover{
    color: white;
    background-color: #ffae00;
    /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);*/
    transform: scale(1.05);
}

/*accept view delete button styles*/
.accept{
    color: rgb(3, 202, 3);
    margin-right: 10px;
}
.accept:hover{
    background-color: rgb(3, 202, 3);
    border: rgb(3, 202, 3);
}
.view{
    color: #1882fb;
    margin-right: 10px;
}
.view:hover{
    background-color: #1882fb;
    border: 1px white;  
}

.del{
    color: red;
}
.del:hover{
    background-color: red;
    border: red;
}

/*close button styles*/
#closeView{
    color: red;
    /*font-size: large;*/
    font-size: 2rem;
    font-weight: bold;
    width: 40px;
    height: 40px;
    margin-left: 95%;
    margin-bottom: 1%;
}

#closeView:hover{
    color: white;
    background-color: red;
    border: red;
}

/*button styles for form*/
.sBtn{
    color: rgb(3, 202, 3);
}
.sBtn:hover{
    color: white;
    background-color: rgb(3, 202, 3);
    border: 1px solid rgb(3, 202, 3);
}

.rBtn{
    color: red;
}
.rBtn:hover{
    color: white;
    background-color: red;
    border: 1px solid red;
}

.chBtn{
    color: rgb(0, 17, 255);
}
.chBtn:hover{
    color: white;
    background-color: rgb(0, 17, 255);
    border: 1px solid rgb(0, 17, 255);
}
/*hidden view styles*/
#hiddenView{
    position: absolute;
    z-index: 1;
}

/*style for background*/
.bg{
    /*background-color: rgba(0, 0, 0, 0.4);*/
    /*background-image: url("../Images/bg.png");
    background-size: cover;
    background-repeat: no-repeat;*/
    width: 100vw;
    height: 100vh;
    position: fixed;
    filter: blur(5px);
    z-index: -1;
}

/*style for main view*/
.main{
    background-color: #fff;
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    width: 96%;
    margin: 2% 2% 5% 2%;
    padding: 5px;
}

/*style for searchResults*/

#searchResults{
    margin-bottom: 20px;
}

/*style for dropdown menu*/

#dContent{
    display: none;
    height: auto;
    width:90%;
    position: absolute;
    z-index: 1;
}

#dropdown{
    margin-left: 90%;
    margin-bottom: 2%;
}

#dBtn{
    width: 120px;
    background-color: #3498DB;
    color: white;
    border: none;
    cursor: pointer;
}

#dBtn:hover{
    background-color: #2980B9;
}

#dList{
    list-style: none;
}

.lB{
    justify-content: left;
    background-color: #f1f1f1;
    width: 120px;
}

.lb:hover{
    background-color: #ddd;
    cursor: pointer;
}

